test/files/neg/t5728.check
t5728.scala:3: error: implicit classes must accept exactly one primary constructor parameter
  implicit class Foo
                 ^
one error found
